--- a/frontend/client/main.css
+++ b/frontend/client/main.css
@@ -1,12 +1,14 @@
 /* CSS declarations go here */
 body {
     font-family: 'Montserrat', sans-serif;
-    background-color: #F8F7F5;    
+    background-color: #F8F7F5;
+    padding-bottom: 30px;
 }
 
 h1 {
     text-align: center;
-    color: #CACBCD;
+    border-bottom: solid 1px #CACBCD;
+    padding-bottom: 10px;
 }
 
 td {
@@ -54,6 +56,16 @@ a:hover {
 
 .messageSpan {
     display: inline-block;
+    margin-top: 10px;
+}
+
+.messageDiv {
+    margin-top: 10px;
+}
+
+.verticalLine {
+    border-left: 1px solid #CACBCD;
+    padding-left: 40px;
 }
 
 .boxDiv {
