Added styling for progress bar

--- a/frontend/client/style/style.scss
+++ b/frontend/client/style/style.scss
@@ -800,6 +800,11 @@ table {
     background-color:#FCFCFC;
   }
 
+  .progress{
+    margin-top:10px;
+    margin-bottom:15px;
+  }
+
   .alert{
     margin-top:10px;
     margin-bottom:15px;
