--- a/frontend/client/style/style.scss
+++ b/frontend/client/style/style.scss
@@ -133,11 +133,28 @@ table {
   }
 
   td.buttons{
-    width:100px;
+    width:170px;
   }
 
   td.timeleft{
     width:170px;
+  }
+
+  .grey{
+    background-color:#FCFCFC;
+  }
+
+  .newbid-section{
+    border-top:1px solid #E6E6E6;
+    border-bottom:1px solid #E6E6E6;
+    padding:15px;
+    padding-top:0px;
+    -webkit-box-shadow:inset 0 0 5px 0 rgba(0,0,0,0.1);
+    box-shadow:inset 0 0 5px 0 rgba(0,0,0,0.1);
+
+    .close{
+      margin-right:-15px;
+    }
   }
 
 }
